# translation-agent

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ruff.yml
app/: README.md  app.py  patch.py  process.py
app/webui/: README.md  __init__.py  app.py  patch.py  process.py  requirements.txt
dev/: agentic-translation.ipynb  convert-translation-agent.py
eval/: ab_dataset_gen.py  bleu_test.py  comet_eval.py  deepl_trans.py  get_wmt.sh  google_trans.py  input-from-sgm.perl  load_wmt.py  nllb_eval.py
eval/app/: app.py  data_points_samples.json  dp_scrape.py  utils.py
eval/data/: wsj.txt
eval/data/the_batch_en/: 4_10_24.txt  4_17_24.txt  4_24_24.txt  5_1_24.txt  5_8_24.txt
eval/data/thebatch/: 4_10_24_sp.txt  4_17_24_sp.txt  4_24_24_bg.txt  4_24_24_sp.txt
eval/scores/: deepl_flores_en_deu.txt  deepl_flores_en_fra.txt  deepl_flores_en_jap.txt  deepl_flores_en_kor.txt  deepl_flores_en_man.txt  deepl_flores_en_por.txt  deepl_flores_en_spa.txt  flores_en_deu_scores.txt  flores_en_spa_scores.txt  google_flores_en_deu.txt  google_flores_en_fra.txt  google_flores_en_kor.txt  google_flores_en_por.txt  google_flores_en_spa.txt  nllb_flores_en_deu.txt  nllb_flores_en_fra.txt  nllb_flores_en_jap.txt  nllb_flores_en_kor.txt  nllb_flores_en_por.txt  nllb_flores_en_spa.txt  translations_en_spa_fixed_prompt_recompiled.txt
eval/translations/: deepl_en_deu.json  deepl_en_fra.json  deepl_en_jap.json  deepl_en_kor.json  deepl_en_man.json  deepl_en_por.json  deepl_en_spa.json  google_en_bul_dp.json  google_en_bul_flores_sample.json  google_en_deu.json  google_en_fra.json  google_en_jap.json  google_en_kor.json  google_en_man_dp.json  google_en_man_flores_sample.json  google_en_por.json  google_en_spa.json  google_en_spa_dp.json  google_en_spa_flores_sample.json  gpt4_en_bul_flores_sample.json  gpt4_en_man_flores_sample.json  gpt4_en_spa_flores_sample.json  gpt4a_en_bul_dp.json  gpt4a_en_man_dp.json  gpt4a_en_spa_dp.json  translations_en_deu.json  translations_en_jpn.json  translations_en_spa.json  translations_nllb_en_deu.json  translations_nllb_en_fra.json  translations_nllb_en_jap.json  translations_nllb_en_kor.json  translations_nllb_en_por.json  translations_nllb_en_spa.json
examples/: README.md  agentic-translation.ipynb  convert-translation-agent.py  example_api_script.py  example_script.py
examples/sample-texts/: data_points_samples.json  sample-long1.txt  sample-short1.txt
sample-texts/: sample-long1.txt
src/translation_agent/: __init__.py  translation_agent_util.py  util.py  utils.py  web_api.py
src/translation_agent_Agently/: README.md  app.py  requirements.txt  result_example.txt  workflow.py
src/translation_agent_Agently/prompt_yamls/: improve_translation.yaml  initial_translation.yaml  reflect_on_translation.yaml
tests/: test_agent.py
translation_agent/: __init__.py  translation_agent_util.py
